--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
+find_package(fmt CONFIG REQUIRED)
+find_package(SqliteOrm CONFIG REQUIRED)
+
 set(PROJECT_SOURCES
         main.cpp
         mainwindow.cpp
@@ -43,7 +46,9 @@ else()
     endif()
 endif()
 
-target_link_libraries(Bank PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(Bank PRIVATE fmt::fmt)
+target_link_libraries(Bank PRIVATE sqlite_orm::sqlite_orm)
+target_link_libraries(Bank PRIVATE Qt${QT_VERSION_MAJOR}::Widgets )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
