Unfinished state of opening User menu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
 
         user.h user.cpp
         bankdb.h
+        userwindow.h userwindow.cpp userwindow.ui
+
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Bank APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
