--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         userwindow.h userwindow.cpp userwindow.ui
         account.h
         personalaccount.h personalaccount.cpp
+        accountwindow.h accountwindow.cpp accountwindow.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Bank APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
