fixed object mapping problems

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,11 +29,11 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         vcpkg.json
 
         user.h user.cpp
-        bankdb.h
+        bankdb.h bankdb.cpp
         userwindow.h userwindow.cpp userwindow.ui
         account.h
         personalaccount.h personalaccount.cpp
-        accountwindow.h accountwindow.cpp accountwindow.ui
+
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Bank APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
