--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         fetcher.h
         savingsaccount.h savingsaccount.cpp
         savingsaccountwindow.h savingsaccountwindow.cpp savingsaccountwindow.ui
+        adminmenu.h adminmenu.cpp adminmenu.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Bank APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
